--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -20,6 +20,7 @@ templ Base() {
 			<script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 			<script src="https://unpkg.com/htmx.org@2.0.4"></script>
 			<script src="https://unpkg.com/hyperscript.org@0.9.13"></script>
+			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 			<!-- <script src="https://unpkg.com/hyperscript.org@0.9.13"></script> -->
 			<!-- <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/> -->
 			// daisyUi
