--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -15,15 +15,18 @@ templ Base() {
 			<title>Book It</title>
 			<!-- <link href="assets/css/output.css" rel="stylesheet"/> -->
 			<!-- <script src="assets/js/htmx.min.js"></script> -->
+			// daisyUi
+			<link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.1/daisyui.css" rel="stylesheet" type="text/css"/>
+			<link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.1/themes.css" rel="stylesheet" type="text/css"/>
 			// tailwind flowbite
-			<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css"/>
+			<script src="https://cdn.tailwindcss.com"></script>
 			<script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+			// htmx
 			<script src="https://unpkg.com/htmx.org@2.0.4"></script>
+			// hyperscript
 			<script src="https://unpkg.com/hyperscript.org@0.9.13"></script>
-			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 			<!-- <script src="https://unpkg.com/hyperscript.org@0.9.13"></script> -->
 			<!-- <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/> -->
-			// daisyUi
 			<script src="/static/toast/toast.js" defer></script>
 		</head>
 		<body>
