--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -3,46 +3,47 @@ package web_books
 import (
 	"fmt"
 	"github.com/FilipBudzynski/book_it/internal/models"
-	"github.com/FilipBudzynski/book_it/utils"
 	"github.com/FilipBudzynski/book_it/cmd/web"
 )
 
 templ BooksSearch() {
 	<div class="max-w-screen-lg mx-auto p-4 items-center">
 		<div class="flex flex-col items-center mx-10 pb-4">
-			<form
-				hx-post="/books"
-				method="POST"
-				hx-target="#books-container"
-				hx-indicator="#loading-spinner"
-				class="w-3/5 mx-12 mb-4"
-			>
-				<label class="input input flex items-center">
-					<input
-						type="search"
-						id="book-title"
-						name="book-title"
-						class="grow"
-						placeholder="Search for new reads"
-					/>
-					<button
-						type="submit"
-					>
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 16 16"
-							fill="currentColor"
-							class="h-4 w-4 opacity-70"
+			<div class="flex w-full justify-center mb-4">
+				<form
+					hx-post="/books"
+					method="POST"
+					hx-target="#books-container"
+					hx-indicator="#loading-spinner"
+					class="flex justify-center w-full"
+				>
+					<label class="input input flex items-center">
+						<input
+							type="search"
+							id="book-title"
+							name="book-title"
+							class="grow"
+							placeholder="Search for new reads"
+						/>
+						<button
+							type="submit"
 						>
-							<path
-								fill-rule="evenodd"
-								d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-								clip-rule="evenodd"
-							></path>
-						</svg>
-					</button>
-				</label>
-			</form>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 16 16"
+								fill="currentColor"
+								class="h-4 w-4 opacity-70"
+							>
+								<path
+									fill-rule="evenodd"
+									d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+									clip-rule="evenodd"
+								></path>
+							</svg>
+						</button>
+					</label>
+				</form>
+			</div>
 			<div class="flex justify-center w-[80rem] mb-10">
 				@BooksTable()
 			</div>
@@ -76,7 +77,7 @@ templ BooksPost(books []*models.Book, userBooks []*models.UserBook, page int, qu
 				</div>
 			</td>
 			<td class="w-1/5 px-3 py-2">
-				@WantToReadButton(book.ID, utils.BookInUserBooks(book.ID, userBooks))
+				@WantToReadButton(book.ID, models.BookInUserBooks(book.ID, userBooks))
 			</td>
 		</tr>
 	}
