--- a/cmd/web/progress/statistics.templ
+++ b/cmd/web/progress/statistics.templ
@@ -18,7 +18,7 @@ templ ProgressStatistics(readingProgress *models.ReadingProgress) {
 		</div>
 		<!-- Tracking -->
 		<div class="pb-6">
-			<div class="stats shadow">
+			<div class="stats shadow bg-base-100">
 				<div class="stat">
 					<div class="stat-figure text-primary">
 						<svg
