--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -13,7 +13,7 @@ templ List(books []*models.UserBook) {
 				<li>My Books</li>
 			</ul>
 		</div>
-		<label class="input input-bordered flex items-center gap-2">
+		<label class="input input-bordered flex items-center gap-2 mb-4">
 			<input
 				name="query"
 				hx-get="/user-books/search"
