--- a/cmd/web/assets/css/output.css
+++ b/cmd/web/assets/css/output.css
@@ -799,6 +799,10 @@ video {
   width: 2.25rem;
 }
 
+.w-\[40rem\] {
+  width: 40rem;
+}
+
 .w-\[70rem\] {
   width: 70rem;
 }
@@ -894,6 +898,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .gap-2 {
@@ -1053,6 +1061,11 @@ video {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .px-3 {
