--- a/cmd/web/progress/log_details_modal.templ
+++ b/cmd/web/progress/log_details_modal.templ
@@ -16,7 +16,7 @@ templ ProgressLogModal(dailyLog models.DailyProgressLog) {
 	<!-- <h3>{ fmt.Sprintf("Target Pages for this day: %d", dailyLog.TargetPages) }</h3> -->
 	<div class="stats shadow w-full">
 		<div class="stat">
-			<div class="stat-title">Target Pages</div>
+			<div class="stat-title">Todays Goal</div>
 			<div class="stat-value">{ fmt.Sprintf("%d", dailyLog.TargetPages) }</div>
 			<div class="stat-desc"></div>
 		</div>
