--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -54,7 +54,7 @@ templ List(books []*models.UserBook) {
 
 templ UserBooksTable(books []*models.UserBook) {
 	<div id="modal-content"></div>
-	<div class="flex-grow max-w-[80rem] place-items-center relative mb-10 rounded-3xl">
+	<div class="flex-grow max-w-[80rem] place-items-center relative mb-10 rounded-3xl shadow-lg">
 		<table class="bg-base-100 table table-md z-1 ">
 			<thead>
 				<th></th>
