--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -17,7 +17,7 @@ templ BooksSearch() {
 					hx-indicator="#loading-spinner"
 					class="flex justify-center w-full"
 				>
-					<label class="input input flex items-center">
+					<label class="input flex items-center">
 						<input
 							type="search"
 							id="book-title"
