--- a/cmd/web/exchange/details.templ
+++ b/cmd/web/exchange/details.templ
@@ -81,7 +81,7 @@ templ DetailsDiv(er *models.ExchangeRequest) {
 								class="card-title mb-2"
 							>Status</h2>
 							<div id="exchange-details-status" >
-								@StatusDiv(er)
+								@StatusDiv(er.Status)
 							</div>
 						</div>
 					</div>
