--- a/cmd/web/exchange/list.templ
+++ b/cmd/web/exchange/list.templ
@@ -60,7 +60,7 @@ templ ExchangeTableRow(er models.ExchangeRequest) {
 		<!-- 	</ul> -->
 		<!-- </td> -->
 		<td>
-			@StatusDiv(&er)
+			@StatusDiv(er.Status)
 		</td>
 		<th>
 			<button
