--- a/cmd/web/exchange/matches.templ
+++ b/cmd/web/exchange/matches.templ
@@ -1,31 +1,33 @@
 package web_exchange
 
 import (
+	"fmt"
 	"github.com/FilipBudzynski/book_it/internal/models"
 )
 
-templ Matches(request *models.ExchangeRequest) {
+templ Matches(matches []*models.ExchangeRequest, request *models.ExchangeRequest) {
 	<div class="justify-center w-full mb-10">
-		if len(request.Matches) == 0 {
+		if len(matches) == 0 {
 			<h1 class="text-3xl">No matches found</h1>
 		} else {
 			<table class="bg-base-100 table table-md z-1 ">
 				<thead>
 					<th>Your book for exchange </th>
-					<th></th>
-					<th></th>
-					<th></th>
+					<th>Title</th>
+					<th>Status</th>
+					<th>Get Connected</th>
+					<th>Action</th>
 				</thead>
 				<tbody
 					id="matched-exchanges"
 				>
-					for _, match := range request.Matches {
+					for _, match := range matches {
 						<tr>
 							<td class="w-1/12 px-3 py-2">
 								<div class="flex items-center gap-3">
 									<div class="avatar">
 										<div class="mask mask-squircle h-12 w-12">
-											<img src={ match.MatchRequest.DesiredBook.ImageLink } alt="img"/>
+											<img src={ match.DesiredBook.ImageLink } alt="img"/>
 										</div>
 									</div>
 								</div>
@@ -33,18 +35,21 @@ templ Matches(request *models.ExchangeRequest) {
 							<td class="w-max px-3 py-2">
 								<div class="flex flex-col">
 									<span class="text-base">
-										<a href="" class="transition ease-out opacity delay-150 hover:text-black">{ match.MatchRequest.DesiredBook.Title } </a>
+										<a href="" class="transition ease-out opacity delay-150 hover:text-black">{ match.DesiredBook.Title } </a>
 									</span>
 									<span class="text-sm text-gray-300">
 										by 
-										{ match.MatchRequest.DesiredBook.Authors }
+										{ match.DesiredBook.Authors }
 									</span>
 								</div>
 							</td>
 							<td>
+								@StatusDiv(request.GetMatchStatus(match.ID))
+							</td>
+							<td>
 								<div
 									class="btn"
-									href={ match.MatchRequest.User.Email }
+									href={ match.User.Email }
 								>
 									Get Connected
 								</div>
@@ -53,8 +58,12 @@ templ Matches(request *models.ExchangeRequest) {
 								<div class="dropdown">
 									<div tabindex="0" role="button" class="btn m-1">action</div>
 									<ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
+										<li>
+											<a hx-post={ fmt.Sprintf("/exchange/accept/%d/%d", request.ID, match.ID) }>
+												Accept
+											</a>
+										</li>
 										<li><a>Reject</a></li>
-										<li><a>Accept</a></li>
 									</ul>
 								</div>
 							</td>
@@ -66,6 +75,6 @@ templ Matches(request *models.ExchangeRequest) {
 		}
 	</div>
 	<div id="exchange-details-status" hx-swap-oob="true">
-		@StatusDiv(request)
+		@StatusDiv(request.Status)
 	</div>
 }
